--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "@lekoarts/gatsby-theme-cara": "^1.2.18",
+    "@bl0ckpro/gat-theme-z": "^1.0.0",
     "gatsby": "^2.25.3",
     "gatsby-plugin-google-analytics": "^2.4.1",
     "gatsby-plugin-manifest": "^2.5.2",
